测试管道模型

--- a/DavidMVC/Web.config
+++ b/DavidMVC/Web.config
@@ -26,7 +26,10 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
+    <httpModules>
+      <add name="HttpModule" type="DavidMVC.HttpModules.CustomHttpModule"/>
+    </httpModules>
+        
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
