--- a/DavidMVC/Web.config
+++ b/DavidMVC/Web.config
@@ -26,9 +26,12 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <httpModules>
+    <!--<httpModules>
       <add name="HttpModule" type="DavidMVC.HttpModules.CustomHttpModule"/>
     </httpModules>
+    <httpHandlers>
+      <add verb="*" path="*" type="DavidMVC.CustomHttpHandler,DavidMVC"/>
+    </httpHandlers>-->
         
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
